--- a/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
+++ b/ERP/Core.Erp.Web/Areas/Banco/Views/ArchivoBancario/_GridViewPartial_archivo_bancario_det.cshtml
@@ -3,11 +3,10 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "GridView_archivo_bancario_det";
-        settings.CallbackRouteValues = new { Controller = "Banco", Action = "GridViewPartial_archivo_bancario_det" };
-        settings.KeyFieldName = "Secuencia";
+        settings.CallbackRouteValues = new { Controller = "ArchivoBancario", Action = "GridViewPartial_archivo_bancario_det" };
+        settings.KeyFieldName = "IdEmpresa";
         settings.Width = Unit.Percentage(100);
         settings.SettingsEditing.Mode = GridViewEditingMode.EditFormAndDisplayRow;
-        settings.SettingsEditing.AddNewRowRouteValues = new { Controller = "ArchivoBancario", Action = "EditingAddNew", Area = "Banco" };
         settings.SettingsEditing.UpdateRowRouteValues = new { Controller = "ArchivoBancario", Action = "EditingUpdate", Area = "Banco" };
         settings.SettingsEditing.DeleteRowRouteValues = new { Controller = "ArchivoBancario", Action = "EditingDelete", Area = "Banco" };
 
@@ -15,7 +14,7 @@
         settings.SettingsBehavior.AllowEllipsisInText = true;
         settings.SettingsResizing.ColumnResizeMode = ColumnResizeMode.Control;
 
-        settings.CommandColumn.Visible = true;
+        settings.CommandColumn.Visible = false;
         settings.CommandColumn.ShowNewButton = false;
         settings.CommandColumn.ShowEditButton = true;
         settings.CommandColumn.ShowDeleteButton = true;
@@ -37,7 +36,32 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 500;
         //Funcion para inicializar fila al presionar nuevo
 
-       
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(40);
+            column.FieldName = "IdOrdenPago";
+            column.Caption = "ID";
+        });
+    
+
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.False;
+            column.Width = Unit.Percentage(40);
+            column.FieldName = "Fecha_proceso";
+            column.Caption = "Fecha";
+            column.PropertiesEdit.DisplayFormatString = "{0:dd/MM/yyyy}";
+        });
+      
+        settings.Columns.Add(column =>
+        {
+            column.EditFormSettings.Visible = DefaultBoolean.True;
+            column.Width = Unit.Percentage(20);
+            column.FieldName = "Valor";
+            column.Caption = "Valor";
+            column.PropertiesEdit.DisplayFormatString = "{0:N2}";
+        });
         settings.ClientSideEvents.BeginCallback = "function(s, e) { e.customArgs['TransaccionFixed'] = $('#IdTransaccionSession').val(); }";
 
     });
