--- a/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
+++ b/ERP/Core.Erp.Web/Areas/CuentasPorPagar/Views/Retencion/Nuevo.cshtml
@@ -24,8 +24,7 @@
     @Html.HiddenFor(q => q.IdEmpresa, new { @id = "IdEmpresa" })
     @Html.HiddenFor(q => q.IdProveedor, new { @id = "IdProveedor" })
     @Html.HiddenFor(q => q.IdRetencion, new { @id = "IdRetencion" })
-
-    @Html.HiddenFor(q => q.IdSucursal)
+    @Html.HiddenFor(q => q.IdSucursal, new { @id = "IdSucursal" })
     @Html.HiddenFor(q => q.IdTipoCbte_Ogiro)
     @Html.HiddenFor(q => q.IdCbteCble_Ogiro)
     @Html.HiddenFor(q => q.co_serie)
@@ -111,7 +110,6 @@
         </div>
     </div>
 
-
     <div class="row">
         <div class="col-md-12">
             <div class="col-md-10">
@@ -157,6 +155,40 @@
             <div role="tabpanel" class="tab-pane active" style="margin-left: 1em;" id="tab_detalle">
                 <div class="row">
                     <div class="col-md-12">
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                <label for="IdPuntoVta">Punto de venta*</label>
+                                @Html.DropDownListFor(q => q.IdPuntoVta, new SelectList(ViewBag.lst_punto_venta, "IdPuntoVta", "nom_PuntoVta"), new { @class = "form-control", @id = "IdPuntoVta" })
+                                @Html.ValidationMessageFor(q => q.IdPuntoVta, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                        <div class="col-md-2" id="datos_punto_venta1">
+                            <div class="form-group">
+                                <label for="vt_serie1">Establecimiento*</label>
+                                @Html.TextBoxFor(q => q.serie1, new { @class = "form-control", @id = "serie1" })
+                                @Html.ValidationMessageFor(q => q.serie1, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2" id="datos_punto_venta2">
+                            <div class="form-group">
+                                <label for="vt_serie2">Pto. Emisión*</label>
+                                @Html.TextBoxFor(q => q.serie2, new { @class = "form-control", @id = "serie2" })
+                                @Html.ValidationMessageFor(q => q.serie2, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+                        <div class="col-md-2" id="datos_punto_venta3">
+                            <div class="form-group">
+                                <label for="vt_NumFactura"># Documento*</label>
+                                @Html.TextBoxFor(q => q.NumRetencion, new { @class = "form-control", @id = "NumRetencion" })
+                                @Html.ValidationMessageFor(q => q.NumRetencion, "", new { @class = "text-danger" })
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-12">
                         <div class="col-md-12">
                             <div class="form-group">
                                 <label for="co_observacion">Detalle retención*</label>
@@ -192,6 +224,20 @@
     }
 }
 <script>
+
+    $(function () {
+        CargarPuntosDeVenta();
+        GetUltimoDocumento();
+
+        $("#IdSucursal").change(function () {
+            CargarPuntosDeVenta();
+            GetUltimoDocumento();
+        });
+        $("#IdPuntoVta").change(function () {
+            GetUltimoDocumento();
+        });
+    });
+
     function SetValorRetencion(s, e) {
         var datos = {
             IdCodigoSRI: s.GetValue()
@@ -247,4 +293,64 @@
 
     };
 
+    function CargarPuntosDeVenta() {
+        $("#IdPuntoVta").empty();
+        var datos = {
+            IdSucursal: $("#IdSucursal").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("CargarPuntosDeVenta", "Retencion",new { Area = "CuentasPorPagar" })',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                console.log(data);
+                $.each(data, function (i, row) {
+                    $("#IdPuntoVta").append("<option value=" + row.IdPuntoVta + ">" + row.nom_PuntoVta + "</option>");
+                    $("#IdPuntoVta").val($("#IdPuntoVta option:first").val());
+                });
+            },
+            error: function (error) {
+            }
+        });
+    }
+
+    function GetUltimoDocumento() {
+        var datos = {
+            IdSucursal: $("#IdSucursal").val(),
+            IdPuntoVta: $("#IdPuntoVta").val()
+        }
+        $.ajax({
+            type: 'POST',
+            data: JSON.stringify(datos),
+            url: '@Url.Action("GetUltimoDocumento", "Retencion",new { Area = "CuentasPorPagar" })',
+            async: false,
+            dataType: 'json',
+            contentType: 'application/json; charset=utf-8',
+            success: function (data) {
+                if (data.data_puntovta != null) {
+                    if (data.data_puntovta.EsElectronico == true) {
+                        $("#datos_punto_venta1").hide();
+                        $("#datos_punto_venta2").hide();
+                        $("#datos_punto_venta3").hide();
+                    }
+                    else {
+                        $("#datos_punto_venta1").show();
+                        $("#datos_punto_venta2").show();
+                        $("#datos_punto_venta3").show();
+
+                        if (data.data_talonario != null) {
+                            $("#serie1").val(data.data_talonario.Establecimiento);
+                            $("#serie2").val(data.data_talonario.PuntoEmision);
+                            $("#NumRetencion").val(data.data_talonario.NumDocumento);
+                        }
+                    }
+                }
+            },
+            error: function (error) {
+            }
+        });
+    }
 </script>
